# memcpy-gemm

./: .bazelrc  BUILD  README  README.md  WORKSPACE  cuda.bzl  distribution_tests.cc  distribution_tests.h  distribution_tests_test.cc  gemm_test_lib.cc  gemm_test_lib.h  gemm_test_lib_internal.cc  gemm_test_lib_internal.h  gemm_test_lib_mock.h  gemm_test_lib_test.cc  matrix_lib.cc  matrix_lib.h  matrix_lib_test.cc  memcpy_gemm.cc  memcpy_gemm_lib.cc  memcpy_gemm_lib.h  memcpy_gemm_test.py  memory_allocator_interface.h  multi_gemm_lib.cc  multi_gemm_lib.h  numa.bzl  nvcc.bzl
src/: cuda_check.h  cuda_compute_copy.cu  cuda_compute_copy.cu.h  cuda_compute_copy.h  distribution_tests.cc  distribution_tests.h  distribution_tests_test.cc  gemm_test_lib.cc  gemm_test_lib.h  gemm_test_lib_internal.cc  gemm_test_lib_internal.h  gemm_test_lib_internal_test.cc  gemm_test_lib_mock.h  gemm_test_lib_test.cc  matrix_lib.cc  matrix_lib.h  matrix_lib_cuda.cc  matrix_lib_cuda.h  matrix_lib_impl.h  matrix_lib_test.cc  memcpy_gemm.cc  memcpy_gemm_lib.cc  memcpy_gemm_lib.h  memcpy_gemm_test.py  multi_gemm_lib.cc  multi_gemm_lib.h
toolchain/: BUILD  BUILD.bazel  cc_toolchain_config.bzl
