""" Contains build rule for static memcpy-gemm toolchain """

load("//toolchain:cc_toolchain_config.bzl", "cc_toolchain_config")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

cc_toolchain_config(name = "static_toolchain_config")

cc_toolchain_suite(
    name = "static",
    toolchains = {
        "k8|staticbuilder": ":static_toolchain",
    },
)

filegroup(name = "empty")

cc_toolchain(
    name = "static_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":static_toolchain_config",
    toolchain_identifier = "static-toolchain",
)

bzl_library(
    name = "cc_toolchain_config_bzl",
    srcs = ["cc_toolchain_config.bzl"],
)
